--- a/code/youtube.html
+++ b/code/youtube.html
@@ -8,32 +8,114 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="video.css" />
-    <link rel="stylesheet" href="header.css" />
-    <link rel="stylesheet" href="general.css" />
+    <link rel="stylesheet" href="../styles/header.css" />
+    <link rel="stylesheet" href="../styles/video.css" />
+    <link rel="stylesheet" href="..//styles/general.css" />
+    <link rel="stylesheet" href="../styles/video.css" />
+    <link rel="stylesheet" href="../styles/header.css" />
+    <link rel="stylesheet" href="../styles/general.css" />
+    <link rel="stylesheet" href="../styles/side-bar.css" />
   </head>
 
   <body>
     <div class="header">
-      <div class="left-section"><label>Left Section</label></div>
-      <div class="m iddle-section">
-        <input class="search-bar" type="text" placeholder="Search" />
+      <div class="left-section">
+        <img class="hamburger-icon" src="../header-icons/hamburger-menu.svg" />
+        <img
+          class="youtube-icon"
+          src="../header-icons/youtube-logo.svg"
+          alt=""
+        />
       </div>
-      <div class="right-section">Right Section</div>
+
+      <div class="middle-section">
+        <input class="search-bar" type="text" placeholder="Search" />
+        <button class="search-button">
+          <img class="search-button-img" src="../header-icons/search.svg" />
+          <div class="toolkit">Search</div>
+        </button>
+        <button class="voice-button">
+          <img
+            class="voice-button-img"
+            src="../header-icons/voice-search-icon.svg"
+          />
+          <div class="toolkit">Search with Your Voice</div>
+        </button>
+      </div>
+
+      <div class="right-section">
+        <div class="upload-button">
+          <img class="upload-img" src="../header-icons/upload.svg" alt="" />
+          <div class="toolkit">Create</div>
+        </div>
+
+        <div class="youtube-apps-button">
+          <img
+            class="yt-apps-img"
+            src="../header-icons/youtube-apps.svg"
+            alt=""
+          />
+          <div class="toolkit">YouTube Apps</div>
+        </div>
+
+        <div class="notifi">
+          <img
+            class="notification-img"
+            src="../header-icons/notifications.svg"
+            alt=""
+          />
+          <div class="notifi-number">3</div>
+          <div class="toolkit">Notifications</div>
+        </div>
+
+        <img
+          class="channel-img"
+          src="../channel_icon/vector-flat-illustration-grayscale-avatar-600nw-2281862025.webp"
+          alt=""
+        />
+      </div>
+    </div>
+
+    <div class="side-bar">
+      <div class="sidebar-link">
+        <img class="img" src="../sidebar-icons/home.svg" alt="" />
+        <div class="text">Home</div>
+      </div>
+      <div class="sidebar-link">
+        <img class="img" src="../sidebar-icons/explore.svg" alt="" />
+        <div class="text">Explore</div>
+      </div>
+      <div class="sidebar-link">
+        <img class="img" src="../sidebar-icons/subscriptions.svg" alt="" />
+        <div class="text">Subscriptions</div>
+      </div>
+      <div class="sidebar-link">
+        <img class="img" src="../sidebar-icons/originals.svg" alt="" />
+        <div class="text">Original</div>
+      </div>
+      <div class="sidebar-link">
+        <img class="img" src="../sidebar-icons/youtube-music.svg" alt="" />
+        <div class="text">YouTube Music</div>
+      </div>
+      <div class="sidebar-link">
+        <img class="img" src="../sidebar-icons/library.svg" alt="" />
+        <div class="text">library</div>
+      </div>
     </div>
 
     <div class="all-video-grid">
       <div class="video-preview">
-        <div>
+        <div class="thumbnail-row">
           <img
             class="thumbnail"
-            src="styles/thumbnail-1.webp"
+            src="../thumbnails/thumbnail-1.webp"
             alt="Image Issue"
           />
+          <div class="video-time">14:20</div>
         </div>
         <div class="video-grid">
           <div class="channel-picture">
-            <img class="author-icon" src="channel-1.jpeg" />
+            <img class="author-icon" src="../channel_icon/channel-1.jpeg" />
           </div>
           <div class="video-info">
             <p class="video-title">
@@ -46,12 +128,17 @@
       </div>
 
       <div class="video-preview">
-        <div>
-          <img class="thumbnail" src="thumbnail-2.webp" alt="Image Issue" />
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="../thumbnails/thumbnail-2.webp"
+            alt="Image Issue"
+          />
+          <div class="video-time">8:20</div>
         </div>
         <div class="video-grid">
           <div class="channel-picture">
-            <img class="author-icon" src="channel-2.jpeg" />
+            <img class="author-icon" src="../channel_icon/channel-2.jpeg" />
           </div>
           <div class="video-info">
             <p class="video-title">Try Not To Laugh Challenge #9</p>
@@ -62,12 +149,17 @@
       </div>
 
       <div class="video-preview">
-        <div>
-          <img class="thumbnail" src="thumbnail-3.webp" alt="Image Issue" />
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="../thumbnails/thumbnail-3.webp"
+            alt="Image Issue"
+          />
+          <div class="video-time">9:13</div>
         </div>
         <div class="video-grid">
           <div class="channel-picture">
-            <img class="author-icon" src="channel-3.jpeg" />
+            <img class="author-icon" src="../channel_icon/channel-3.jpeg" />
           </div>
           <div class="video-info">
             <p class="video-title">
@@ -80,12 +172,17 @@
       </div>
 
       <div class="video-preview">
-        <div>
-          <img class="thumbnail" src="thumbnail-4.webp" alt="Image Issue" />
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="../thumbnails/thumbnail-4.webp"
+            alt="Image Issue"
+          />
+          <div class="video-time">22:09</div>
         </div>
         <div class="video-grid">
           <div class="channel-picture">
-            <img class="author-icon" src="channel-4.jpeg" />
+            <img class="author-icon" src="../channel_icon/channel-4.jpeg" />
           </div>
           <div class="video-info">
             <p class="video-title">
@@ -98,12 +195,17 @@
       </div>
 
       <div class="video-preview">
-        <div>
-          <img class="thumbnail" src="thumbnail-5.webp" alt="Image Issue" />
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="../thumbnails/thumbnail-5.webp"
+            alt="Image Issue"
+          />
+          <div class="video-time">11:17</div>
         </div>
         <div class="video-grid">
           <div class="channel-picture">
-            <img class="author-icon" src="channel-5.jpeg" />
+            <img class="author-icon" src="../channel_icon/channel-5.jpeg" />
           </div>
           <div class="video-info">
             <p class="video-title">
@@ -116,12 +218,17 @@
       </div>
 
       <div class="video-preview">
-        <div>
-          <img class="thumbnail" src="thumbnail-6.webp" alt="Image Issue" />
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="../thumbnails/thumbnail-6.webp"
+            alt="Image Issue"
+          />
+          <div class="video-time">19:59</div>
         </div>
         <div class="video-grid">
           <div class="channel-picture">
-            <img class="author-icon" src="channel-6.jpeg" />
+            <img class="author-icon" src="../channel_icon/channel-6.jpeg" />
           </div>
           <div class="video-info">
             <p class="video-title">
@@ -134,12 +241,17 @@
       </div>
 
       <div class="video-preview">
-        <div>
-          <img class="thumbnail" src="thumbnail-7.webp" alt="Image Issue" />
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="../thumbnails/thumbnail-7.webp"
+            alt="Image Issue"
+          />
+          <div class="video-time">10:13</div>
         </div>
         <div class="video-grid">
           <div class="channel-picture">
-            <img class="author-icon" src="channel-7.jpeg" />
+            <img class="author-icon" src="../channel_icon/channel-7.jpeg" />
           </div>
           <div class="video-info">
             <p class="video-title">Why Planes Don't Fly Over Tibet</p>
@@ -150,16 +262,111 @@
       </div>
 
       <div class="video-preview">
-        <div>
-          <img class="thumbnail" src="thumbnail-8.webp" alt="Image Issue" />
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="../thumbnails/thumbnail-8.webp"
+            alt="Image Issue"
+          />
+          <div class="video-time">7:12</div>
         </div>
         <div class="video-grid">
           <div class="channel-picture">
-            <img class="author-icon" src="channel-8.jpeg" />
+            <img class="author-icon" src="../channel_icon/channel-8.jpeg" />
           </div>
           <div class="video-info">
             <p class="video-title">
               Inside The World's Biggest Passenger Plane
+            </p>
+            <p class="video-author">Tech Vision</p>
+            <p class="video-status">3.7M views &#183; 10 months ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="../thumbnails/thumbnail-9.webp"
+            alt="Image Issue"
+          />
+          <div class="video-time">13:17</div>
+        </div>
+        <div class="video-grid">
+          <div class="channel-picture">
+            <img class="author-icon" src="../channel_icon/channel-9.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">The SECRET to Super Human STRENGTH</p>
+            <p class="video-author">ThenX</p>
+            <p class="video-status">20M views &#183; 3 year ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="../thumbnails/thumbnail-10.webp"
+            alt="Image Issue"
+          />
+          <div class="video-time">7:53</div>
+        </div>
+        <div class="video-grid">
+          <div class="channel-picture">
+            <img class="author-icon" src="../channel_icon/channel-10.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              How The World's Largest Cruise Ship Makes 30,000 Meals Every Day
+            </p>
+            <p class="video-author">Business Insider</p>
+            <p class="video-status">14M views &#183; 1 year ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="../thumbnails/thumbnail-11.webp"
+            alt="Image Issue"
+          />
+          <div class="video-time">4:10</div>
+        </div>
+        <div class="video-grid">
+          <div class="channel-picture">
+            <img class="author-icon" src="../channel_icon/channel-11.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Dubai's Crazy Underwater Train and Other Things #Only in Dubai
+            </p>
+            <p class="video-author">Destination Tips</p>
+            <p class="video-status">3M views &#183; 1 year ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="../thumbnails/thumbnail-12.webp"
+            alt="Image Issue"
+          />
+          <div class="video-time">4:51</div>
+        </div>
+        <div class="video-grid">
+          <div class="channel-picture">
+            <img class="author-icon" src="../channel_icon/channel-12.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              What would happen if you didn’t drink water? - Mia Nacamulli
             </p>
             <p class="video-author">Tech Vision</p>
             <p class="video-status">3.7M views &#183; 10 months ago</p>
